[gd_scene load_steps=3 format=3 uid="uid://cons4iws235x2"]

[ext_resource type="Script" path="res://World/border.gd" id="1_mipav"]
[ext_resource type="Material" uid="uid://x5bkllm86aji" path="res://Tiles/CityMeshes/Building Meshes/Materials/Border.tres" id="2_rtjqw"]

[node name="Border" type="Node3D"]
script = ExtResource("1_mipav")

[node name="N_Wall" type="CSGBox3D" parent="."]
size = Vector3(20, 30, 1)
material = ExtResource("2_rtjqw")

[node name="S_Wall" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11)
size = Vector3(20, 30, 1)
material = ExtResource("2_rtjqw")

[node name="E_Wall" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5.5, 0, 5.5)
size = Vector3(20, 30, 1)
material = ExtResource("2_rtjqw")

[node name="W_Wall" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5.5, 0, 5.5)
size = Vector3(20, 30, 1)
material = ExtResource("2_rtjqw")
